"add page load animation and edit other bugs and change the images "

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@
     line-height: 1.1;
     letter-spacing: 0em;
     background: black;
+    overflow: hidden;
 }
 a{
     color: inherit;
@@ -17,3 +18,4 @@ a{
 *{
     box-sizing: border-box;
 }
+
